[gd_scene load_steps=4 format=3 uid="uid://dc2qrsvddd5fy"]

[ext_resource type="Script" path="res://scripts/water.gd" id="1_8falg"]
[ext_resource type="Texture2D" uid="uid://bv6e8j6dcngjy" path="res://assets/art/props/evilwater(1).png" id="1_41owt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hdfv4"]
size = Vector2(472.449, 302.893)

[node name="evil_water" type="Sprite2D"]
scale = Vector2(0.203111, 0.203111)
texture = ExtResource("1_41owt")
script = ExtResource("1_8falg")

[node name="Button" type="Button" parent="."]
modulate = Color(0.843137, 0.843137, 0.843137, 0)
anchors_preset = -1
anchor_left = 0.207
anchor_top = 0.278
anchor_right = 0.207
anchor_bottom = 0.278
offset_left = -401.924
offset_top = -304.656
offset_right = -393.924
offset_bottom = -296.656
scale = Vector2(54.4135, 54.4472)
flat = true

[node name="Area2D" type="Area2D" parent="." groups=["water"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-22.1554, 78.7746)
scale = Vector2(0.906631, -1.43041)
shape = SubResource("RectangleShape2D_hdfv4")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
